--- a/code/server/pom.xml
+++ b/code/server/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>rus.translate</groupId>
-    <artifactId>WWWServiceTranslate</artifactId>
+    <artifactId>ServiceTranslateWWW</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -17,6 +17,8 @@
         <primefaces-version>5.2</primefaces-version>
         <javax.version>3.0.1</javax.version>
         <log4j.version>1.2.17</log4j.version>
+        <hibernate.version>5.2.6.Final</hibernate.version>
+        <mysqlconnector.version>6.0.5</mysqlconnector.version>
 
     </properties>
 
@@ -33,6 +35,21 @@
     </dependencyManagement>
 
     <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysqlconnector.version}</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-api -->
         <dependency>
             <groupId>com.sun.faces</groupId>
@@ -51,7 +68,11 @@
             <artifactId>primefaces</artifactId>
             <version>${primefaces-version}</version>
         </dependency>
-
+        <!--<dependency>-->
+            <!--<groupId>org.primefaces</groupId>-->
+            <!--<artifactId>primefaces</artifactId>-->
+            <!--<version>6.0</version>-->
+        <!--</dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
         <dependency>
@@ -76,6 +97,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.webflow/spring-webflow -->
+        <dependency>
+            <groupId>org.springframework.webflow</groupId>
+            <artifactId>spring-webflow</artifactId>
+            <version>${webflow-version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.webflow</groupId>
             <artifactId>spring-faces</artifactId>
@@ -124,6 +150,10 @@
                 <exclusion>
                     <groupId>javax.jms</groupId>
                     <artifactId>jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>com.sun.jmx</groupId>
